<!--suppress AndroidMissingOnClickHandler -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".activities.LoginActivity"
    tools:ignore="Overdraw">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="100dp"
        android:paddingBottom="75dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:text="@string/app_name"/>

    <ProgressBar
        android:id="@+id/progressBarLoading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <LinearLayout
        android:id="@+id/panelLogin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:hint="@string/emailText"
            android:id="@+id/textboxEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/passwordText"
            android:id="@+id/textboxPassword"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginText"
            android:onClick="loginClick"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:onClick="forgotPasswordClick"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/i_forgot_my_password"/>

    </LinearLayout>

</LinearLayout>